# domain-gateway

./: .dockerignore  .gitignore  02-schemas.md  ARCHITETTURE.md  CoAP-documentation.md  Dockerfile  PROBLEMS.md  README.md  pyproject.toml
domain_gateway/: main.py
domain_gateway/cache/: base.py  cache.py
domain_gateway/cache/backends/: memory.py
domain_gateway/connections/internals/: handler.py
domain_gateway/connections/internals/connections/mqtt/: handler.py
domain_gateway/core/: cache.py  handler.py  utils.py
domain_gateway/core/interfaces/: handler.py
domain_gateway/core/utils/: utils.py
domain_gateway/egress/: handler.py
domain_gateway/egress/connections/http/: handler.py
domain_gateway/egress/connections/http/routers/: computing.py  robots.py
domain_gateway/egress/connections/websocket/: handler.py
domain_gateway/egress/connections/websocket/models/: subscription.py
domain_gateway/egress/connections/websocket/routers/: subscription.py
domain_gateway/ingress/: handler.py
domain_gateway/ingress/connections/mqtt/: handler.py
domain_gateway/models/: mqtt_topics.py
domain_gateway/models/connections/: mqtt.py  subscription.py
domain_gateway/models/topic/: paths.py  payloads.py
domain_gateway/routers/: computing.py  robots.py  subscription.py
src/domain_gateway/: main.py  settings.py  utils.py
src/domain_gateway/connections/internals/: connection.py  handler.py
src/domain_gateway/connections/internals/connections/mqtt/: connection.py  handler.py
src/domain_gateway/core/: bus.py  cache.py  connection.py  container.py  handler.py  monitor.py
src/domain_gateway/dependencies/: container.py  fastapi_deps.py
src/domain_gateway/models/topic/: mappings.py  paths.py  payloads.py
tests/: conftest.py  http.py  mocks.py  test_prova.py  ws.py
tests/api/coap/: test_coap_computing.py  test_coap_robots.py
tests/api/http/: test_computing.py  test_health.py  test_http.py  test_robots.py
tests/api/ws/: test_ws.py
tests/fixtures/: app.py  coap.py  data.py
tests/mocks/: connections.py
translation_server/: main.py
translation_server/models/: __init__.py  mqtt_topic.py  mqtt_topics.py
translation_server/models/connections/: subscription.py
translation_server/models/responces/: mqtt.py  subscription.py
translation_server/routers/: computing.py  robots.py  subscription.py
