[project]
name = "domain_gateway"
version = "0.1.0"
description = "Protocol-agnostic gateway for bidirectional communication with the inner domain"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomqtt>=2.5.1",
    "fastapi[standard]>=0.135.1",
    "pydantic>=2.12.5",
]

[tool.fastapi]
entrypoint = "domain_gateway.main:app"

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.anyio]
mode = ["auto"]

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "asgi-lifespan>=2.1.0",
    "httpx>=0.28.1",
    "httpx-ws>=0.9.0",
    "pytest>=9.0.2",
]
