[project]
name = "domain_gateway"
version = "0.1.0"
authors = [
    { name = "Alessandro Gardini", email = "alessandro.gardini7@studio.unibo.it" }
]
license = "MIT"
description = "Protocol-agnostic gateway for bidirectional communication with the inner domain"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiocoap>=0.4.17",
    "aiomqtt>=2.5.1",
    "fastapi[standard]>=0.135.1",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24",
]

[tool.fastapi]
entrypoint = "domain_gateway.main:app"

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "websocket: Tests that use WebSocket connections",
    "http: Tests that use HTTP endpoints",
    "coap: Tests for CoAP endpoints",
    "robots: Tests for /robots endpoints",
    "computing: Tests for /computing endpoints",
    "subscriptions: Tests for /subscriptions endpoints"
]
